--- a/views/registrar.ejs
+++ b/views/registrar.ejs
@@ -63,7 +63,7 @@
 
                 <!-- Formulario de registro -->
                 <div class="row">
-                    <div class="col-lg-8">
+                    <div class="col-12">
                         <form id="formRegistro" action="/registrar" method="POST">
                             <div class="card">
                                 <div class="card-header">
@@ -104,8 +104,8 @@
                                     <div class="row mt-3">
                                         <div class="col-md-6 offset-md-6">
                                             <div class="card bg-light">
-                                                <div class="card-body">
-                                                    <h5>Total: <span id="montoTotal">S/ 0.00</span></h5>
+                                                <div class="card-body text-center">
+                                                    <h4 class="mb-0">Total: <span id="montoTotal" class="text-success">S/ 0.00</span></h4>
                                                 </div>
                                             </div>
                                         </div>
